kubernetes/dummy.yaml
apiVersion: v1
kind: Pod
metadata:
  name: task-pv-pod
  namespace: bioc-code-explorer
spec:
  volumes:
    - name: content-itswiki-pvc
      persistentVolumeClaim:
        claimName: bioc-code-tools-index-pvc
    - name: content-itswiki-pvc1
      persistentVolumeClaim:
        claimName: bioc-code-iscsi-pvc
  containers:
    - name: task-pv-container
      image: nginx
      ports:
        - containerPort: 80
          name: "http-server"
      volumeMounts:
        - mountPath: "/var/zoekt"
          name: content-itswiki-pvc
        - mountPath: "/var/git"
          name: content-itswiki-pvc1
      resources:
        limits:
          cpu: 1
          memory: 2Gi
        requests:
          cpu: 700m
          memory: 1Gi
